# Platformer-SFML

./: CMakeLists.txt  README.md  SPECIFICATIONS.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
docs/: Doxyfile  custom.css
docs/html/: action_8hpp.html  action_8hpp.js  action_8hpp__dep__incl.map  action_8hpp__dep__incl.md5  action_8hpp__incl.map  action_8hpp__incl.md5  action_8hpp_source.html  animation_8cpp.html  animation_8cpp__incl.map  animation_8cpp__incl.md5  animation_8cpp_source.html  animation_8hpp.html  animation_8hpp.js  animation_8hpp__dep__incl.map  animation_8hpp__dep__incl.md5  animation_8hpp__incl.map  animation_8hpp__incl.md5  animation_8hpp_source.html  annotated.html  annotated_dup.js  asset__manager_8cpp.html  asset__manager_8cpp__incl.map  asset__manager_8cpp__incl.md5  asset__manager_8cpp_source.html  asset__manager_8hpp.html  asset__manager_8hpp.js  asset__manager_8hpp__dep__incl.map  asset__manager_8hpp__dep__incl.md5  asset__manager_8hpp__incl.map  asset__manager_8hpp__incl.md5  asset__manager_8hpp_source.html  class_animation-members.html  class_animation.html  class_animation.js  class_asset_manager-members.html  class_asset_manager.html  class_asset_manager.js  class_config_parser-members.html  class_config_parser.html  class_config_parser.js  (+426 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  (+44 more)
resources/: config.toml
resources/levels/: debug.data  level1.data  level2.data  level3.data  mario_1_1.data
src/: action.hpp  animation.cpp  animation.hpp  asset_manager.cpp  asset_manager.hpp  components.hpp  config_parser.cpp  config_parser.hpp  config_structs.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  game_engine.cpp  game_engine.hpp  main.cpp  misc.cpp  misc.hpp  physics.hpp  scene.cpp  scene.hpp  scene_menu.cpp  scene_menu.hpp  scene_play.cpp  scene_play.hpp
